--- a/services/roles/project/api/templates/index.html
+++ b/services/roles/project/api/templates/index.html
@@ -16,6 +16,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="column" style="position:fixed; top:30px; left:0px;font-size: 0.8em;">
+        <a href="http://localhost">Users</a> <br/>
+        <a href="http://localhost:5002">Roles</a> <br/>
+        <a href="http://localhost:5003">Components</a> <br/>
+        Controls
+      </div>
       <div class="column is-one-third">
         <br>
         <h1 class="title">All Roles</h1>
